# bfgbot

./: LICENSE  README.md  env  pyproject.toml
src/bfgbot/: __init__.py  bfg_bot.py  bfg_bot_db_client.py  discord_classes.py  morceaux_robots_repository.py
src/bfgbot/db_responses/: user_totals.py
